[package]
name = "topflight_macro_utils"
version = "0.1.0"
edition = "2021"
authors = ["Athlena"]
description = "Top Flight: the language making you a Top Flight developper."
repository = "https://github.com/Baduit/TopFlight"
homepage = "https://topflightonline.baduit.eu/"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
